--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
