--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.3",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/vite": "^4.1.13",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
