--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "countries-and-timezones": "^3.8.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-aria-components": "^1.12.2",
     "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
